<resources>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="lbl_forgot_password">Mot de passe oublié ?</string>
    <string name="title_activity_signup"> Sign Up </string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="app_name">O-Sport</string>
    <string name="action_sign_in_short">Inscription</string>
    <string name="email">E-mail</string>
    <string name="minimum_password">Mot de passe trop court, entrez au minimum 6 caractères!</string>
    <string name="auth_failed">Authentication rejetée, vérifiez votre e-mail et mot de passe ou inscrivez-vous</string>
    <string name="change_email">Changer d\'adresse e-mail</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="send_password_reset_email">Envoie du mail de réinitialisation du mot de passe</string>
    <string name="remove_user">Supprimer son compte</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="strbutton">Surpoids</string>
    <string name="strbutton2">Normal</string>
    <string name="strbutton3">Maigre</string>
    <string name="strtext"> </string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Nom complet</string>
    <string name="btn_login">Connexion</string>
    <string name="btn_link_to_register">Pas encore membre ?</string>
    <string name="btn_link_to_login">Déjà membre ? Connecte toi !</string>
    <string name="btn_forgot_password">Mot de passe oublié ?</string>
    <string name="btn_reset_password">Réinitialisation du mot de passe</string>
    <string name="btn_back">Retour</string>
    <string name="hint_new_email">Nouvelle adresse mail</string>
    <string name="btn_change">Validation</string>
    <string name="btn_send">Envoie</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Déconnexion</string>
    <string name="forgot_password_msg">Nous vous avons envoyé un mail pour réinitialiser votre mot de passe.</string>
    <string name="title_activity_main"> O-Sport </string>
    <string name="prompt_password">Enter le mot de passe</string>
    <string name="title_activity_plan">Map</string>

    <string name="weight">Poids</string>
    <string name="height">Taille</string>
    <string name="calculateBMI">Calculer IMC</string>
    <string name="very_severely_underweight">Anorexique</string>
    <string name="severely_underweight">Très maigre</string>
    <string name="underweight">Maigre</string>
    <string name="normal">Normal</string>
    <string name="overweight">Surpoids</string>
    <string name="obese_class_i">Obese</string>
    <string name="obese_class_ii">Très Obese</string>
    <string name="obese_class_iii">Extremement Obese</string>
    <string name="title_activity_create_programme">createProgrammeActivity</string>
    <string name="title_activity_suivi">suiviActivity</string>
</resources>